--- a/index.html
+++ b/index.html
@@ -8,10 +8,46 @@
 		<title>Microwavesam's Website</title>
 		<link rel="stylesheet" href="css/bootstrap.css">
 		<link rel="stylesheet" href="css/style.css">
+		<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,700' rel='stylesheet' type='text/css'>
 </head>
 <body>
-		<div id="microwavesam" class="text-center">
-				MicrowaveSam's personal website.
-		</div>
+	<div class="navbar-wrapper">
+      <div class="container">
+
+        <nav class="navbar navbar-inverse navbar-static-top">
+          <div class="container">
+            <div class="navbar-header">
+              <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+              </button>
+              <!-- <a class="navbar-brand" href="#">MicrowaveSam</a> -->
+              <img id="brand-pic" src="img/brand-pic.jpg"/>
+            </div>
+            <div id="navbar" class="navbar-collapse collapse">
+              <ul class="nav pull-right navbar-nav">
+                <li class="active"><a href="#">Home</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#portfolio">Portfolio</a></li>
+                <li class="dropdown">
+                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Social Media <span class="caret"></span></a>
+                  <ul class="dropdown-menu">
+                    <li><a href="https://twitter.com/huyle333">Twitter</a></li>
+                    <li><a href="https://youtube.com/user/microwavesam">YouTube</a></li>
+                    <li><a href="https://linkedin.com/in/huyle333">Linkedin</a></li>
+                  </ul>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </nav>
+
+      </div>
+    </div>
+
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+	<script src="js/bootstrap.js"></script>
 </body>
 </html>
