Third part of the tutorial series.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<meta name="description" content="Microwavesam's personal website">
 		<meta name="author" content="Microwavesam">
 		<title>Microwavesam's Website</title>
+		<link rel="icon" href="img/brand-pic.jpg">
 		<link rel="stylesheet" href="css/bootstrap.css">
 		<link rel="stylesheet" href="css/style.css">
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,700' rel='stylesheet' type='text/css'>
@@ -46,6 +47,17 @@
 
       </div>
     </div>
+
+     <!-- Carousel
+    ================================================== -->
+    <div id="myCarousel" class="carousel slide" data-ride="carousel">
+      <div class="carousel-inner" role="listbox">
+        <div class="item active">
+          <img class="first-slide" src="img/scenic-background.jpg" alt="First slide">
+        </div>
+      </div>
+    </div><!-- /.carousel -->
+
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 	<script src="js/bootstrap.js"></script>
