Fourth part of the tutorial series.

--- a/index.html
+++ b/index.html
@@ -58,6 +58,67 @@
       </div>
     </div><!-- /.carousel -->
 
+    <!-- Marketing messaging and featurettes
+    ================================================== -->
+    <!-- Wrap the rest of the page in another container to center all the content. -->
+
+    <div class="container marketing">
+
+      <!-- Three columns of text below the carousel -->
+      <div id="about" class="row">
+      	<div class="col-lg-4"></div>
+        <div class="col-lg-4">
+          <img id="about-pic" class="thumbnail" src="img/brand-pic.jpg" alt="Generic placeholder image" width="140" height="140">
+          <h2>MicrowaveSam</h2>
+          <p>MicrowaveSam is a YouTube tutorial guru.</p>
+          <p><a class="btn btn-primary" target="_blank" href="https://youtube.com/user/microwavesam" role="button">YouTube channel</a></p>
+        </div><!-- /.col-lg-4 -->
+      </div><!-- /.row -->
+    </div>
+
+    <div id="portfolio" class="new-background">
+    <div class="container">
+      <div class="row featurette">
+        <div class="col-md-7">
+	      	<h2 class="margin-center featurette-heading">MicrowaveSam tutorials.</h2>
+	      	<p class="lead">MicrowaveSam tries to do a lot of tutorials.</p>
+        </div>
+        <div class="col-md-5">
+          <img class="picture-padding thumbnail featurette-image img-responsive center-block" src="img/tutorial.jpg" alt="Generic placeholder image">
+        </div>
+      </div>
+    </div>
+    </div>
+
+    <div class="container">
+      <div class="row featurette">
+        <div class="col-md-7 col-md-push-5">
+          <h2 class="margin-center featurette-heading">MicrowaveSam programs.</h2>
+          <p class="lead">MicrowaveSam programs as a Computer Science major.</p>
+        </div>
+        <div class="col-md-5 col-md-pull-7">
+          <img class="picture-padding thumbnail featurette-image img-responsive center-block" src="img/programming.png" alt="Generic placeholder image">
+        </div>
+      </div>
+    </div>
+
+    <div class="new-background">
+    <div class="container">
+      <div class="row featurette">
+        <div class="col-md-7">
+          <h2 class="margin-center featurette-heading">MicrowaveSam plays games.</h2>
+          <p class="lead">MicrowaveSam has a PS4 and PC.</p>
+        </div>
+        <div class="col-md-5">
+          <img class="picture-padding thumbnail featurette-image img-responsive center-block" src="img/ps4.jpg" alt="Generic placeholder image">
+        </div>
+      </div>
+    </div>
+   	</div>
+
+      <hr class="featurette-divider">
+
+      <!-- /END THE FEATURETTES -->
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 	<script src="js/bootstrap.js"></script>
