Tutorial part 5. End of series.

--- a/index.html
+++ b/index.html
@@ -116,9 +116,16 @@
     </div>
    	</div>
 
-      <hr class="featurette-divider">
-
       <!-- /END THE FEATURETTES -->
+
+    <div class="grey-background">
+    <div class="container">
+	   	<footer id="footer">
+	    	<p class="pull-right"><a href="#">Back to top</a></p>
+	        <p>&copy; 2015 MicrowaveSam &middot; Made with <span id="heart">&hearts;</span> by MicrowaveSam</p>
+	    </footer>
+    </div>
+    </div>
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 	<script src="js/bootstrap.js"></script>
